--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="7; url='https://saechsische.de'" />
+    <meta http-equiv="refresh" content="1; url='https://saechsische.de'" />
   </head>
   <body>
-    <p>You will be redirected to w3docs.com soon!</p>
+    <p>You will be redirected...</p>
   </body>
 </html>
